Rendered vertices of kidney mesh as points, changed background color + fog options

--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html>
 
 <head>
+		<link rel="icon" 
+		type="image/png" 
+		href="http://example.com/myicon.png">
 	<title>Three.js</title>
 	<style type="text/css">
 		html,
