Added CNS favicon

--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html>
 
 <head>
-		
+	<link rel="icon" 
+	type="image/png" 
+	href="https://cns.iu.edu/images/global/favicon.ico">
 	<title>Three.js</title>
 	<style type="text/css">
 		html,
@@ -11,6 +13,7 @@
 			padding: 0;
 			overflow: hidden;
 		}
+
 
 		#debug {
 			position: absolute;
