simplified setup, added randomized spheres

--- a/index.html
+++ b/index.html
@@ -2,9 +2,7 @@
 <html>
 
 <head>
-	<link rel="icon" 
-	type="image/png" 
-	href="https://cns.iu.edu/images/global/favicon.ico">
+	<link rel="icon" type="image/png" href="https://cns.iu.edu/images/global/favicon.ico">
 	<title>Three.js</title>
 	<style type="text/css">
 		html,
@@ -47,7 +45,8 @@
 	<script
 		src="https://rawgit.com/archilogic-com/aframe-space-navigator-controls/master/dist/aframe-space-navigator-controls.js">
 	</script>
-	<script src="main.js"></script>
+	<!-- <script src="main.js"></script> -->
+	<script src="main-simple.js"></script>
 </body>
 
 </html>
