Changed default material for spheres to Lambert, Added "camera position"  <dic> to debugging window

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 <body>
 	<canvas id="c"></canvas>
 	<div id="debug">
+			<div>Camera position:<span></span></div>
 		<div>x:<span id="x"></span></div>
 		<div>y:<span id="y"></span></div>
 		<div>z:<span id="z"></span></div>
