Renamed to bubble-bath, show-ready, to preserve bubble bath state

--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
 		src="https://rawgit.com/archilogic-com/aframe-space-navigator-controls/master/dist/aframe-space-navigator-controls.js">
 	</script>
 	<!-- <script src="main.js"></script> -->
-	<!-- <script src="main-simple.js"></script> -->
-	<script src="basicInteractivity.js"></script>
+	<script src="bubble-bath.js"></script>
+	<!-- <script src="basicInteractivity.js"></script> -->
 </body>
 
 </html>
