--- a/index.html
+++ b/index.html
@@ -28,12 +28,16 @@
 <body>
 	<canvas id="c"></canvas>
 	<div id="debug">
-			<div>Camera position:<span></span></div>
+		<div>Camera position:<span></span></div>
 		<div>x:<span id="x"></span></div>
 		<div>y:<span id="y"></span></div>
 		<div>z:<span id="z"></span></div>
+		<div>distance to target:<span id="distance"></span></div>
 
 	</div>
+
+	<div id="container"></div>
+
 	<div id="webgl"></div>
 	<script src="kidney-utils.js"></script>
 	<script src="lib/Tween.min.js"></script>
@@ -42,13 +46,17 @@
 	<script src="lib/three.js"></script>
 	<script src="lib/OBJLoader.js"></script>
 	<script src="lib/OrbitControls.js"></script>
+	<script src="lib/WebGL.js"></script>
+	<script src="lib/stats.min.js"></script>
 	<!-- Load Space Navigator code -->
 	<script
 		src="https://rawgit.com/archilogic-com/aframe-space-navigator-controls/master/dist/aframe-space-navigator-controls.js">
 	</script>
 	<!-- <script src="main.js"></script> -->
+	<!-- <script src="split-screen-test.js"></script> -->
 	<script src="bubble-bath.js"></script>
 	<!-- <script src="basicInteractivity.js"></script> -->
+	<!-- <script src="multiple-viewport-demo.js"></script> -->
 </body>
 
 </html>
