--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script src="TemplateData/UnityProgress.js"></script>
     <script src="Build/UnityLoader.js"></script>
     <script>
-      var unityInstance = UnityLoader.instantiate("unityContainer", "Build/9-2-19-deploy5.json", {onProgress: UnityProgress});
+      var unityInstance = UnityLoader.instantiate("unityContainer", "Build/9-3-19-web-deploy-1.json", {onProgress: UnityProgress});
     </script>
   </head>
   <body>
